# compoVm

./: .gitignore  CMakeLists.txt
coreModules/: bool.cp  collectionPort.cp  component.cp  connectionDescription.cp  descriptor.cp  int.cp  interface.cp  port.cp  portDescription.cp  service.cp  serviceInvocation.cp  serviceSignature.cp  string.cp  system.cp
include/: compoNode.h  definitions.h  parserWrapper.h  types.h
include/ast/: node.h  program.h
include/ast/compo/: abstractDescriptorInterface.h  abstractReqProv.h  abstractServConstr.h  architecture.h  bind.h  collectionPortLiteral.h  connection.h  constraint.h  delegation.h  dereferenceLiteral.h  descriptor.h  disconnection.h  injectedPort.h  interface.h  namedPort.h  port.h  portAddress.h  provision.h  requirement.h  service.h  serviceInvocation.h  serviceSignature.h  signaturesPort.h  universalPort.h
include/ast/nodes/: node.h  program.h
include/ast/procedural/: abstractExpression.h  abstractPrimaryExpression.h  abstractStatement.h  additionExpression.h  assignmentExpression.h  binaryExpression.h  breakStatement.h  compoundBody.h  constant.h  continueStatement.h  divisionExpression.h  equalityExpression.h  forStatement.h  greaterExpression.h  greaterOrEqualExpression.h  ifStatement.h  lessExpression.h  lessOrEqualExpression.h  logicalAndExpression.h  logicalOrExpression.h  multiplicationExpression.h  nonEqualityExpression.h  parens.h  returnStatement.h  stringLiteral.h  subtractionExpression.h  symbol.h  whileStatement.h
include/ast/semantic/: globalDescriptorsTable.h  syntaxDescriptorsTable.h
include/ast/semanticStructures/: globalDescriptorsTable.h
include/ast/types/: nodeType.h  operatorType.h  portType.h  visibilityType.h
include/ast/visitor/: abstractStringVisitor.h  abstractVisitor.h  constantsVisitor.h  printVisitor.h  semanticCheckVisitor.h
include/definitions/: allDefinitions.h  astCompoDefinitions.h  astProceduralDefinitions.h  astTypesDefinitions.h  interpreterDefinitions.h  memoryDefinitions.h  memoryObjectsDefinitions.h  typesDefinitions.h
include/exceptions/: abstractException.h
include/exceptions/execution/: breakException.h  continueException.h  returnException.h
include/exceptions/runtime/: coreModuleNotFoundException.h  kernelModuleNotFoundException.h  mainComponentMissingException.h  mainServiceMissingException.h  memoryNotFoundException.h  portNotFoundException.h  primitiveServiceNoPortException.h  selfPortNotCollectionException.h  serviceNotCompiledException.h  serviceNotFoundException.h  unknownAstNodeTypeException.h  unknownOperatorTypeException.h  unknownPortTypeException.h  unknownValueComponentTypeException.h  variableNotFoundException.h  variableRedefinitionException.h  wrongBindTypeException.h  wrongFormOfMainException.h  wrongNumberOfParametersException.h  wrongParametersException.h  wrongPortTypeException.h  wrongServiceInvocationParameterTypeException.h  wrongServiceTypeInArchitectureException.h  wrongStringOperationException.h  wrongValueComponentPortException.h
include/exceptions/semantic/: abstractRedefinedException.h  abstractRedefinitionException.h  abstractSemanticException.h  abstractUndefinedException.h  bidirectionalPortNotSupportedException.h  emptyProgramException.h  externalPortConnectionException.h  redefinedDescriptorException.h  redefinedInterfaceException.h  redefinedPortException.h  redefinitionDescriptorException.h  redefinitionInterfaceException.h  undefinedDescriptorException.h  undefinedInterfaceException.h  undefinedPortException.h  undefinedSymbolException.h  unsupportedFeatureException.h  (+3 more)
include/interpreter/: config.h  kernelModules.h
include/logger/: logger.h
include/nodes/: compoAbstractReqProv.h  compoAbstractServConstr.h  compoAbstractService.h  compoArchitecture.h  compoAssignment.h  compoConstant.h  compoConstraint.h  compoDescriptor.h  compoFor.h  compoInjectedPort.h  compoIntegerLiteral.h  compoNode.h  compoParens.h  compoPort.h  compoProvision.h  compoRequirement.h  compoService.h  compoStringLiteral.h  compoSymbol.h  intExtType.h  node.h  nodeDefinitions.h  nodeType.h  visibilityType.h
include/parser/: block.h  lexer.h  parserWrapper.h
include/turtle/: constraints.hpp  mock.hpp  version.hpp
kernel/: collectionPort.cp  component.cp  service.cp
resources/: Doxyfile  grammar.l  grammar.y
script/: build.pl  clean.pl  indent.pl  loc.pl  teststats.pl  teststatsdoc.pl
src/: compoNode.cpp  main.cpp  parserWrapper.cpp  types.cpp
src/ast/: node.cpp  program.cpp
src/exceptions/: abstractException.cpp
src/logger/: logger.cpp
src/nodes/: compoAbstractReqProv.cpp  compoAbstractServConstr.cpp  compoAbstractService.cpp  compoArchitecture.cpp  compoAssignment.cpp  compoConstant.cpp  compoConstraint.cpp  compoDescriptor.cpp  compoFor.cpp  compoInjectedPort.cpp  compoIntegerLiteral.cpp  compoNode.cpp  compoParens.cpp  compoPort.cpp  compoProvision.cpp  compoRequirement.cpp  compoService.cpp  compoStringLiteral.cpp  compoSymbol.cpp  node.cpp  nodeType.cpp
src/parser/: block.cpp  parserWrapper.cpp
test/: bootstrapTest.cpp  coreModulesTest.cpp  interpreterTest.cpp  nodesCompoTest.cpp  nodesProceduralBinaryTest.cpp  nodesProceduralTest.cpp  nodesTest.cpp  parserCompoTest.cpp  parserProceduralTest.cpp  parserTest.cpp  semanticsTest.cpp  test01.cm  testDefinitions.h  testRunner.cpp  visitorTest.cpp
test/ast/: nodesCompoTest.cpp  nodesProceduralBinaryTest.cpp  visitorTest.cpp
test/bootstrap/: bootstrapStage1Test.cpp  bootstrapStage2Test.cpp
test/compoTests/: calculator.cp  cars.cp  helloWorld.cp  reflection.cp
test/core/: interpreterProceduralTest.cpp  interpreterTest.cpp
test/coreModules/: coreModulesTest.cpp
test/input/: test01.cm
test/interpreter/: interpreterCollectionPortsTest.cpp  interpreterCompoComplexText.cpp  interpreterCompoTest.cpp  interpreterInheritanceTest.cpp  interpreterProceduralTest.cpp  interpreterReflectionTest.cpp  interpreterSimplePortsTest.cpp  interpreterValuesTest.cpp
test/parser/: parserCompoTest.cpp  parserProceduralTest.cpp
test/semantics/: constantsTest.cpp  semanticsTest.cpp
(+451 files in other folders)
